# social-network-api

./: .gitignore  AUTHORS  ChangeLog  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.py  tests.py
.github/workflows/: python-app.yml
src/social_network_api/: cli.py
