[metadata]
name = social-network-api
version = 0.1
description = Example of social network api
author = Ivan Vorobyev
author_email = ivorob@gmail.com
license = MIT
url = https://github.com/ivorob/social-network-api
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8

[options]
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    social-network-server = social_network_api.cli:run
